--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/confirm.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/confirm.xhtml
@@ -11,7 +11,7 @@
 
 <!-- BOX START -->
         <div class="Container60 Responsive100">
-                <p:panel id="inputArea" style="border: 0px; background: transparent; height: 270px">
+                <p:panel id="confirmArea" style="border: 0px; background: transparent; height: 270px">
                     <ui:include src="/pages/try/addon/final.xhtml"/>
                     
                      <f:facet name="footer">
