--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/index.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/index.xhtml
@@ -10,7 +10,7 @@
 <h:outputScript name="/js/ltamCharts.js" library="ltam"/>
 
 <!-- BOX START -->
-<h:form id="ltamForm">
+<h:form id="ceForm">
 <p:panel id="contentpanel" style="border: 0px; background: transparent">
 
 <div class="layout-portlets-box">
