--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page1.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page1.xhtml
@@ -53,7 +53,7 @@
          <div class="TexAlCenter MarTop20">
          
          		<p:commandButton value="Next"  rendered="#{ceb.pagemanager.nextButtonStat}"
-                                      update=":ltamForm:contentpanel,:ltamForm:disclaimer"
+                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
                                       actionListener="#{ceb.nextPage}"/>
          
          </div>
