--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page2.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page2.xhtml
@@ -20,10 +20,10 @@
             </h2>
             <div class="EmptyBox10"></div>
             <p:commandButton styleClass="prev" value="Previous" rendered="#{ceb.pagemanager.prevButtonStat}"
-                                      update=":ltamForm:contentpanel,:ltamForm:disclaimer"
+                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
                                       actionListener="#{ceb.prevPage}"/>
                      <p:commandButton styleClass="Fright" value="Next"  rendered="#{ceb.pagemanager.nextButtonStat}"
-                                      update=":ltamForm:contentpanel,:ltamForm:disclaimer"
+                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
                                       actionListener="#{ceb.nextPage}"/>
     </div>
 
