--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page6.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page6.xhtml
@@ -52,10 +52,10 @@
         </table>
         <div class="EmptyBox20"></div>
         <p:commandButton value="Previous" rendered="#{ceb.pagemanager.prevButtonStat}"
-                                      update=":ltamForm:contentpanel,:ltamForm:disclaimer"
+                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
                                       actionListener="#{ceb.prevPage}"/>
                      <p:commandButton styleClass="Fright" value="Next"  rendered="#{ceb.pagemanager.nextButtonStat}"
-                                      update=":ltamForm:contentpanel,:ltamForm:disclaimer"
+                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
                                       actionListener="#{ceb.nextPage}"/>
     </div>
 
