--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page3.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page3.xhtml
@@ -42,10 +42,10 @@
         <div class="EmptyBox20"></div>
 
 	<p:commandButton value="Previous" rendered="#{ceb.pagemanager.prevButtonStat}"
-                                      update=":ltamForm:contentpanel,:ltamForm:disclaimer"
+                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
                                       actionListener="#{ceb.prevPage}"/>
                      <p:commandButton styleClass="Fright" value="Next"  rendered="#{ceb.pagemanager.nextButtonStat}"
-                                      update=":ltamForm:contentpanel,:ltamForm:disclaimer"
+                                      update=":ceForm:contentpanel,:ceForm:disclaimer"
                                       actionListener="#{ceb.nextPage}"/>
     </div>
 
