--- a/ltam/modules/web/src/main/webapp/pages/consumer/cedit.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/cedit.xhtml
@@ -67,7 +67,7 @@
                 </div>
 
 
-                <div class="Container50 Responsive100 top_desk">
+                <div class="Container50 Responsive100">
                     <div class="ContainerIndent">
                         <p:panel id="graphArea" style="border: 0px; background: transparent"
                                  rendered="#{ceb.displayGraphs}">
